// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`the engine > raises a runtime error in an expression as the current engine does, with its line 1`] = `
[
  {
    "tables": [
      [
        [
          "target",
          "action",
        ],
        [
          "text",
          "Before.",
        ],
      ],
    ],
    "tags": [],
    "text": "Before.
",
  },
]
`;

exports[`the engine > shows a generic for over a table as the current engine does 1`] = `
{
  "beats": [
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Item 1 5.",
          ],
        ],
      ],
      "tags": [],
      "text": "Item 1 5.
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Item 2 6.",
          ],
        ],
      ],
      "tags": [],
      "text": "Item 2 6.
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Total 3.",
          ],
        ],
      ],
      "tags": [],
      "text": "Total 3.
",
    },
  ],
  "continues": 4,
  "errors": [],
}
`;

exports[`the engine > shows a loop that breaks from inside a nested if as the current engine does 1`] = `
{
  "beats": [
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Pass 1.",
          ],
        ],
      ],
      "tags": [],
      "text": "Pass 1.
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Pass 2.",
          ],
        ],
      ],
      "tags": [],
      "text": "Pass 2.
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "After 3.",
          ],
        ],
      ],
      "tags": [],
      "text": "After 3.
",
    },
  ],
  "continues": 4,
  "errors": [],
}
`;

exports[`the engine > shows a loop that continues from inside a nested if as the current engine does 1`] = `
{
  "beats": [
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Odd 1.",
          ],
        ],
      ],
      "tags": [],
      "text": "Odd 1.
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Odd 3.",
          ],
        ],
      ],
      "tags": [],
      "text": "Odd 3.
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Repeat 1.",
          ],
        ],
      ],
      "tags": [],
      "text": "Repeat 1.
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Repeat 3.",
          ],
        ],
      ],
      "tags": [],
      "text": "Repeat 3.
",
    },
  ],
  "continues": 5,
  "errors": [],
}
`;

exports[`the engine > shows a match with keyed and keyless arms as the current engine does 1`] = `
{
  "beats": [
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Bee.",
          ],
        ],
      ],
      "tags": [],
      "text": "Bee.
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "1 = Uno.",
          ],
        ],
      ],
      "tags": [],
      "text": "1 = Uno.
",
    },
  ],
  "continues": 3,
  "errors": [],
}
`;

exports[`the engine > shows a scene with logic as the current engine does 1`] = `
{
  "beats": [
    {
      "tables": [
        [
          [
            "target",
            "dialogue",
          ],
          [
            "character",
            "HERO",
          ],
          [
            "text",
            "Visit 1.",
          ],
        ],
      ],
      "tags": [],
      "text": "Visit 1.
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Step 1.",
          ],
        ],
      ],
      "tags": [],
      "text": "Step 1.
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Step 2.",
          ],
        ],
      ],
      "tags": [],
      "text": "Step 2.
",
    },
  ],
  "continues": 4,
  "errors": [],
}
`;

exports[`the engine > shows a while body's local across a break from a nested block as the current engine does 1`] = `
{
  "beats": [
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "After outer.",
          ],
        ],
      ],
      "tags": [],
      "text": "After outer.
",
    },
  ],
  "continues": 2,
  "errors": [],
}
`;

exports[`the engine > shows a while body's local across a continue as the current engine does 1`] = `
{
  "beats": [
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Sum 120 and outer.",
          ],
        ],
      ],
      "tags": [],
      "text": "Sum 120 and outer.
",
    },
  ],
  "continues": 2,
  "errors": [],
}
`;

exports[`the engine > shows a while body's local that shadows an outer one as the current engine does 1`] = `
{
  "beats": [
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Inner 1.",
          ],
        ],
      ],
      "tags": [],
      "text": "Inner 1.
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Inner 2.",
          ],
        ],
      ],
      "tags": [],
      "text": "Inner 2.
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Inner 3.",
          ],
        ],
      ],
      "tags": [],
      "text": "Inner 3.
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Outer outer after 3.",
          ],
        ],
      ],
      "tags": [],
      "text": "Outer outer after 3.
",
    },
  ],
  "continues": 5,
  "errors": [],
}
`;

exports[`the engine > shows globals of every kind as the current engine does 1`] = `
{
  "beats": [
    {
      "tables": [],
      "tags": [],
      "text": "Globals 4 Ann 6",
    },
  ],
  "continues": 1,
  "errors": [
    "1: RUNTIME ERROR: 'main' line 9: attempt to index a nil value",
  ],
}
`;

exports[`the engine > shows interpolation of every value type as the current engine does 1`] = `
{
  "beats": [
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Values 5 2.5 3 s true false nil 1 Infinity -0.5 3 1024 ab.",
          ],
        ],
      ],
      "tags": [],
      "text": "Values 5 2.5 3 s true false nil 1 Infinity -0.5 3 1024 ab.
",
    },
  ],
  "continues": 2,
  "errors": [],
}
`;

exports[`the engine > shows nested scopes that shadow a name as the current engine does 1`] = `
{
  "beats": [
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Inner 3.",
          ],
        ],
      ],
      "tags": [],
      "text": "Inner 3.
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Middle 2.",
          ],
        ],
      ],
      "tags": [],
      "text": "Middle 2.
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Outer 1.",
          ],
        ],
      ],
      "tags": [],
      "text": "Outer 1.
",
    },
  ],
  "continues": 4,
  "errors": [],
}
`;

exports[`the engine > shows nested while loops that each shadow a name as the current engine does 1`] = `
{
  "beats": [
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Seen b1b2a1b1b2a2 and outer.",
          ],
        ],
      ],
      "tags": [],
      "text": "Seen b1b2a1b1b2a2 and outer.
",
    },
  ],
  "continues": 2,
  "errors": [],
}
`;

exports[`the engine > shows operators and coercion as the current engine does 1`] = `
{
  "beats": [
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Math 9 5 14 3.5 1 3 -7 49.",
          ],
        ],
      ],
      "tags": [],
      "text": "Math 9 5 14 3.5 1 3 -7 49.
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Compare false true false false true true true.",
          ],
        ],
      ],
      "tags": [],
      "text": "Compare false true false false true true true.
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Logic 2 2 false false d.",
          ],
        ],
      ],
      "tags": [],
      "text": "Logic 2 2 false false d.
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Strings n7 4 72.",
          ],
        ],
      ],
      "tags": [],
      "text": "Strings n7 4 72.
",
    },
  ],
  "continues": 5,
  "errors": [],
}
`;

exports[`the engine > shows tables and properties as the current engine does 1`] = `
{
  "beats": [
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Table 3 30 7 zed 2 1.",
          ],
        ],
      ],
      "tags": [],
      "text": "Table 3 30 7 zed 2 1.
",
    },
  ],
  "continues": 2,
  "errors": [],
}
`;
